--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,4 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans");
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif");
+
+@layer components {
+  .card {
+    @apply p-5 bg-white shadow-sm md:p-8 rounded-xl;
+  }
+  .btn-primary {
+    @apply text-black shadow-sm bg-primary-500 hover:opacity-80;
+  }
+  .btn-primary-outline {
+    @apply border-2 shadow-sm border-primary-500;
+  }
+  .btn-primary-ghost {
+    @apply shadow-sm text-primary-500 hover:bg-primary-600 hover:text-white;
+  }
+  .btn-black {
+    @apply text-white bg-black shadow-sm hover:opacity-80;
+  }
+  .btn-black-outline {
+    @apply text-black border-2 border-black shadow-sm;
+  }
+  .btn-black-ghost {
+    @apply text-black shadow-sm hover:bg-black hover:text-white;
+  }
+  .btn-white {
+    @apply text-black bg-white shadow-lg hover:opacity-80;
+  }
+  .btn-white-outline {
+    @apply border-2 border-white shadow-lg;
+  }
+  .btn-white-ghost {
+    @apply text-black hover:shadow-lg hover:bg-white hover:text-white;
+  }
+  .textfield-primary {
+    @apply transition bg-white border-[1.5px] disabled:text-gray-300  border-gray-500 text-gray-500   font-medium [&>input]:placeholder:font-medium [&>input]:placeholder:text-gray-500 text-sm rounded-lg  focus-within:ring-1  focus-within:ring-primary-500  focus-within:border-primary-500 block px-3 py-2;
+  }
+  .textfield-none {
+    @apply w-full p-0 bg-transparent border-transparent appearance-none focus:border-transparent focus:ring-transparent;
+  }
+  .checkbox-primary {
+    @apply w-4 h-4 rounded bg-primary-500 text-primary-600 focus:ring-slate-100;
+  }
+  .radio-primary {
+    @apply w-4 h-4 text-primary-500 focus:ring-primary-500;
+  }
+  .select-primary {
+    @apply block px-3 py-2 text-sm font-medium transition bg-white border border-gray-700 rounded-lg text-primary-500 placeholder:text-gray-500 focus:ring-1 focus:ring-primary-500 focus:border-primary-500;
+  }
+}
