--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif');
 
 @layer components {
+  .icon {
+    @apply w-6 h-6;
+  }
   .card {
     @apply p-5 bg-white shadow-sm md:p-8 rounded-xl;
   }
