--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
     @apply w-6 h-auto fill-current shrink-0;
   }
   .card {
-    @apply p-5 bg-white shadow-sm md:p-8 rounded-xl;
+    @apply rounded-2xl shadow-xl overflow-hidden
   }
   .btn-primary {
     @apply text-black shadow-sm bg-primary-500 hover:opacity-80;
@@ -53,4 +53,5 @@
   .select-primary {
     @apply block px-3 py-2 text-sm font-medium transition bg-white border border-gray-700 rounded-lg text-primary-500 placeholder:text-gray-500 focus:ring-1 focus:ring-primary-500 focus:border-primary-500;
   }
+
 }
