--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,13 +12,13 @@
     @apply font-bold text-sm
   }
   .icon {
-    @apply w-6 h-6 fill-current text-black shrink-0;
+    @apply w-6 h-6 text-black fill-current shrink-0;
   }
   .card {
-    @apply rounded-2xl shadow-xl overflow-hidden;
+    @apply overflow-hidden shadow-xl rounded-2xl;
   }
   .btn-primary {
-    @apply text-black shadow-sm bg-primary-500 hover:opacity-80;
+    @apply text-black shadow-sm bg-primary-500;
   }
   .btn-primary-outline {
     @apply border-2 shadow-sm border-primary-500;
@@ -57,7 +57,7 @@
     @apply w-4 h-4 text-primary-500 focus:ring-primary-500;
   }
   .select-primary {
-    @apply block px-3 py-2 text-sm font-medium transition bg-white border border-gray-700 rounded-lg  placeholder:text-gray-500 focus:ring-1 focus:ring-primary-500 focus:border-primary-500;
+    @apply block px-3 py-2 text-sm font-medium transition bg-white border border-gray-700 rounded-lg placeholder:text-gray-500 focus:ring-1 focus:ring-primary-500 focus:border-primary-500;
   }
   .input-label {
     @apply text-sm font-medium text-gray-900;
